fix alignments for Hero component

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -5,12 +5,15 @@
   display: flex;
   height: 100vh;
   width: 100%;
+  max-width: 1220px;
+  margin: 0 auto;
+  padding: 0 40px;
 
   @include respond-to(lg) {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    padding-top: 40px;
+    padding: 40px 20px ;
     height: auto;
     gap: 1rem;
   }
@@ -22,13 +25,13 @@
     justify-content: center;
     width: 60%;
     text-align: left;
-    padding-right: 40px;
+    background-color: #161b22;
 
     @include respond-to(lg) {
       align-items: center;
       text-align: center;
       width: 100%;
-      padding: 0 20px;
+      padding: 0;
     }
 
     
@@ -92,8 +95,7 @@
     justify-content: flex-end;
     height: 100%;
     width: 40%;
-    background-color: #232b36c2;
-    padding-left: 40px;
+    background-color: #232b36;
 
     @include respond-to(lg) {
       flex-direction: column;
@@ -102,12 +104,8 @@
       width: 100%;
       height: auto;
       background-color: transparent;
-      padding-top: 110px;
+      padding-top: 70px;
       gap: 1rem;
-    }
-
-    @include respond-to(sm) {
-      padding: 40px 20px 0 20px;
     }
   }
 
@@ -203,19 +201,14 @@
 .hero-container {
   display: flex;
   width: 100%;
-}
-
-.hero-left,
-.hero-right {
-  flex-grow: 1;
-  min-width: 50px;
-  height: 100vh;
-}
-
-.hero-left {
-  background-color: #232b36c2;
+  background: linear-gradient(
+    to right,
+    #232b36 50%,
+    #161b22 50%
+  );
 
   @include respond-to(lg) {
-    background-color: transparent;
+    background: #161b22;
+  
   }
 }
